Widget Workshop done

--- a/Index.html
+++ b/Index.html
@@ -14,15 +14,20 @@
 
     <!-- 3rd party libs and frameworks -->
     <script src="Scripts/jquery-3.1.0.min.js"></script>
+    <script src="Scripts/jquery-ui-1.12.1.min.js"></script>
     <script src="Scripts/bootstrap.min.js"></script>
     <script src="Scripts/angular.js"></script>
     <script src="Scripts/angular-route.js"></script>
 
     <!-- Module -->
+
     <script src="Scripts/Modules/module.js"></script>
 
     <!-- Route -->
     <script src="Scripts/Routes/route.js"></script>
+
+    <!--Widget-->
+    <script src="Scripts/Widgets/state-button.widget.js"></script>
 
     <!-- Controllers -->
     <script src="Scripts/Controllers/main.controller.js"></script>
